# perConstructor-sop

./: LICENSE  perConstructor-sop.cabal  readme.md  stack.yaml
src/Generics/SOP/: .#Aeson.hs  .#DMapUtilities.hs  Aeson.hs  DMapUtilities.hs  Distribute.hs  PerConstructor.hs
